--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       href="./images/favicon-32x32.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Social Media Dashboard</title>
     <style>
       .attribution {
