--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io/challenges/social-media-dashboard-with-theme-switcher-6oY8ozp_H"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/megahoma">megahoma</a>.
+    </div>
   </body>
 </html>
